--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,10 +19,9 @@ jobs:
 
     # Step 2: Set up Flutter environment
     - name: Setup Flutter
-      uses: flutter/setup-flutter@v2
+    - uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.13.0'  # 使用 Dart 3.3.4 的 Flutter 版本
-        channel: 'stable'
+        flutter-version: '3.22.0' 
         
     - name: Verify Flutter and Dart versions
       run: |
